# myxml

./: .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  TODO.md  meson.build  meson_options.txt
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 1-issue.yml  bug.yml  config.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: MyxmlConfig.cmake.in  MyxmlConfigVersion.cmake.in  pkg-config.pc.in
docs/: CMakeLists.txt  README.md
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: index.md
examples/: BUILD.bazel  CMakeLists.txt  README.md  meson.build
examples/apis/: BUILD.bazel  CMakeLists.txt
include/myxml/: myxml.h  myxml.hpp
src/: myxml.c  myxml.cpp  myxmlc.cpp
src/modules/: myxml.cppm
tests/: BUILD.bazel  CMakeLists.txt  README.md  meson.build
