# ===================================================================
# Copyright © 2025 Sackey Ezekiel Etrue
# Distributed under the terms of the MIT license.
# ===================================================================

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_license//rules:license.bzl", "license")

#===========================
# Build C++ Library        #
#===========================

cc_library(
	name = "myxml",
	srcs = [
		"src/myxml.cpp",
	],
	hdrs = glob(["include/myxml/*.hpp"]),
	visibility = ["//visibility:public"],
	includes = ["include"],
)

#===========================
# Build C Library          #
#===========================

cc_library(
	name = "myxmlc",
	srcs = [
		"src/myxmlc.cpp",
	],
	hdrs = glob(["include/myxml/*.h", "include/myxml/*.hpp"]),
	visibility = ["//visibility:public"],
    includes = ["src/"],
    linkstatic = True,
	includes = ["include"],
    deps = [":myxml"],
)

# Packaging – create a zip with headers and libraries
genrule(
	name = "dist_zip",
	srcs = ["README.md", "LICENSE"],
	outs = ["myxml-${PROJECT_VERSION}.zip"],
	cmd = "zip -r $@ include src README.md LICENSE || true",
)

# ===================================================================
