# ===================================================================
# Copyright © 2025 Sackey Ezekiel Etrue
# Distributed under the terms of the MIT license.
# ===================================================================

load("@rules_cc//cc:cc_library.bzl", "cc_library")
#===========================
# Build C++ Library        #
#===========================

cc_library(
	name = "myxml",
	srcs = [
		"src/myxml.cpp",
	],
	hdrs = glob(["include/myxml/*.h", "include/myxml/*.hpp"]),
    linkstatic = True,
	visibility = ["//visibility:public"],
	includes = ["include"],
	copts = ["-std=c++17"],
)

#===========================
# Build C Library          #
#===========================

cc_library(
	name = "myxmlc",
	srcs = [
		"src/myxmlc.cpp",
	],
	hdrs = glob(["include/myxml/*.h", "include/myxml/*.hpp"]),
    linkstatic = True,
	visibility = ["//visibility:public"],
	includes = ["include"],
	copts = ["-std=c++17"],
	deps = [":myxml"],
)

# ===================================================================
