option('myxml_install', type: 'boolean', value: true, description: 'Install the library')
option('myxml_build_tests', type: 'boolean', value: false, description: 'Build Tests (default: false)')
option('myxml_build_examples', type: 'boolean', value: false, description: 'Build Examples (default: false)')
