
option('myxml_install',
  type: 'boolean',
  value: true,
  description: 'Install library and headers'
)

option('myxml_cpp_std',
  type: 'combo',
  choices: ['c++11', 'c++14', 'c++17', 'c++20', 'c++23'],
  value: 'c++17',
  description: 'C++ standard to use for compilation'
)

option('myxml_build_tests',
  type: 'boolean',
  value: true,
  description: 'Build test suite'
)

option('myxml_build_examples',
  type: 'boolean',
  value: false,
  description: 'Build examples'
)

option('myxml_build_c_api',
  type: 'boolean',
  value: true,
  description: 'Build C API wrapper'
)