# ===================================================================
# Copyright © 2025 Sackey Ezekiel Etrue
# Distributed under the terms of the MIT license.
# ===================================================================

alias(
	name = "basic_cpp",
	actual = "//examples/apis:basic_cpp",
	visibility = ["//visibility:public"],
)

# ===================================================================
