# ===================================================================
# Copyright © 2025 Sackey Ezekiel Etrue
# Distributed under the terms of the MIT license.
# ===================================================================

load("@rules_cc//cc:defs.bzl", "cc_test")

#===========================
# C++ Library Tests        #
#===========================

cc_test(
	name = "myxml_test",
	srcs = ["cxx/Main.test.cpp"],
	deps = ["//:myxml", "//tests/vendor/Catch2:catch2_main"],
)

#===========================
# C Library Tests          #
#===========================

cc_test(
	name = "myxmlc_test",
	srcs = ["c/Main.test.cpp"],
	deps = ["//:myxmlc", "//tests/vendor/Catch2:catch2_main"],
)

# ===================================================================
