# ===================================================================
# Copyright © 2025 Sackey Ezekiel Etrue
# Distributed under the terms of the MIT license.
# ===================================================================

load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
	name = "basic_cpp",
	srcs = ["Basic.cpp"],
	deps = ["//:myxml"],
	visibility = ["//visibility:public"],
)

# ===================================================================
